commit: added new functionalities to choice the beer format.

--- a/cubos-modulo-2/aula-15/site-02.html
+++ b/cubos-modulo-2/aula-15/site-02.html
@@ -21,6 +21,17 @@
         <input class="criancas" type="number">
     </label>
 
+    <label>
+        Escolha em que litragem deseja calcular a cerveja:
+        <select>
+            <option>Garrafa de 600ml</option>
+            <option>Latão 475ml</option>
+            <option>Long neck 330ml</option>
+            <option>Lata 350ml</option>
+            <option>Latinha 269ml</option>
+        </select>
+    </label>
+
     <button>Calcular</button>
     <script src="main-02.js"></script>
 </body>
